# statismo-itk

./: CMakeLists.txt  README_WRAPPING
Examples/: CMakeLists.txt  landmarkConstrainedShapeModelFitting.cpp
Examples/Python/: buildShapeModel.py  sampling.py
Representers/: itkStandardImageRepresenter.h  itkStandardImageRepresenterTraits.h  itkStandardMeshRepresenter.h  itkStandardMeshRepresenter.txx
Representers/Deprecated/: vtkPolyDataRepresenter.cpp
Wrapping/: CMakeLists.txt  README  wrap_00_itkMeshWrappers.wrap  wrap_01_itkStandardImageRepresenter.wrap  wrap_01_itkStandardMeshRepresenter.wrap  wrap_10_itkConditionalModelBuilder.wrap  wrap_10_itkDataItem.wrap  wrap_10_itkDataManager.wrap  wrap_10_itkPCAModelBuilder.wrap  wrap_10_itkPosteriorModelBuilder.wrap  wrap_10_itkStatisticalModel.wrap  wrap_20_itkStatisticalModelTransform.wrap
statismo_ITK/: itkDataItem.h  itkDataManager.h  itkStatisticalModel.h
