cmake_minimum_required (VERSION 2.6)
project (statismo-itk)

ENABLE_TESTING()

SET(STATISMO_VERSION 0.9) 
SET(STATISMO_MINOR_VERSION 0)

FIND_PACKAGE(ITK 4.1 REQUIRED)
include (${ITK_USE_FILE})

FIND_PACKAGE(statismo)

# rpath settings
SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

# Setup build locations.
if(NOT CMAKE_RUNTIME_OUTPUT_DIRECTORY)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
endif()


#
# Compile and Install HDF5
#

FIND_PATH(HDF5_INCLUDE_DIR hdf5.h HINTS ${ITK_INCLUDE_DIRS})
FIND_PATH(HDF5_INCLUDE_DIR_CPP H5Cpp.h ${ITK_INCLUDE_DIRS})
FIND_LIBRARY(HDF5_LIBRARY hdf5)
FIND_LIBRARY(HDF5_CPP_LIBRARY hdf5_cpp)
GET_FILENAME_COMPONENT(HDF5_LIBRARY_DIR ${HDF5_LIBRARY} PATH) 
SET (HDF5_LIBRARIES ${HDF5_LIBRARY} ${HDF5_CPP_LIBRARY})
SET (STATISMO_LIBRARY_DIR ${HDF5_LIBRARY_DIR})	

#
#optional examples and wrapping
OPTION(BUILD_EXAMPLES "Build the itk examples " OFF)
OPTION(BUILD_PYTHON_WRAPPING "Build python wrapping for the itk representers using wrapitk (experimental)" OFF)

# 
# copy the data
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION share)

set(STATISMO_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

if (BUILD_EXAMPLES)
  add_subdirectory(Examples)
endif()

if (BUILD_PYTHON_WRAPPING)
  add_subdirectory(Wrapping)
endif()


